Rework home visibility and correct orthograph

--- a/src/app/components/forgot-password/forgot-password.component.scss
+++ b/src/app/components/forgot-password/forgot-password.component.scss
@@ -1,48 +1,51 @@
-.container {
-    background-color:black!important;
-    height: 100%;
-    width: 100%;
-    //display: flex;
-    align-items: center;
-    justify-content: center;
-  
-    background: url(../../../assets/game/game-background.jpg) no-repeat center fixed;
-    -webkit-background-size: cover;
-    background-size: cover;
-  
-    .title {
-      color: #333;
-      text-align: center;
-      font-weight: bold;
-      margin:0;
-      padding:20px 10px;
-    }
-  
-    .subtitle {
-      color: #333;
-      font-style: italic;
-      text-align: center;
-      margin:0;
-    }
-  
-    .launch-btn {
-      width:200px;
-      margin: 50px -100px;
-      position:relative;
-      top:50%;
-      left:50%;
-      background-color:cornflowerblue;
-      color: white;
-    }
-  
-    .exit-btn {
-      width:200px;
-      margin: 0px -100px;
-      position:relative;
-      left:50%;
-      background-color:indianred;
-      color: white;
-    }
-  
+.container-fluid {
+  background-color: black !important;
+  height: 100%;
+  //display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background: url(../../../assets/game/game-background.jpg) no-repeat center fixed;
+  -webkit-background-size: cover;
+  background-size: cover;
+
+  .title {
+    color: #333;
+    text-align: center;
+    font-weight: bold;
+    margin: 0;
+    padding: 20px 10px;
   }
-  
+
+  .subtitle {
+    color: #333;
+    font-style: italic;
+    text-align: center;
+    margin: 0;
+  }
+
+  .launch-btn {
+    width: 200px;
+    margin: 50px -100px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    background-color: cornflowerblue;
+    color: white;
+  }
+
+  .exit-btn {
+    width: 200px;
+    margin: 0px -100px;
+    position: relative;
+    left: 50%;
+    background-color: indianred;
+    color: white;
+  }
+
+  .faded-panel {
+    min-height: 162px;
+    background-color: rgba(255, 255, 255, .8);
+  }
+
+}
